src/pages/portfolio.css
.portfolio_container {
  /* margin-top: 8%; */
  background-color: #000;
  min-height: 100vh;
  position: relative;
}

.portfolio_info {
  position: absolute;
  width: 98vw;
  margin-top: 80px;
  padding: 0 40px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  color: #000;
  z-index: 1;
}

.main_container {
  position: absolute;
}

.portfolio_grid_container {
  padding: 8% 0 0;
  width: 95vw;
  display: grid;
  grid-template-columns: repeat(auto-fill, 250px);
  grid-auto-rows: 10px;
  justify-content: center;
  /* position: relative; */
}

@media (max-width: 600px) {
  .portfolio_grid_container {
    padding: 15% 0;
    width: 100vw;
  }
}

.card {
  margin: 15px 10px;
  padding: 0;
  border-radius: 12px;
  overflow: hidden;
  background-color: green;
}
.portfolio_img {
  height: 100%;
  width: 100%;
  object-fit: cover;
  cursor: pointer;
}

.small {
  grid-row-end: span 26;
}
.medium {
  grid-row-end: span 33;
}
.large {
  grid-row-end: span 45;
}

/* PORTFOLIO MODAL */

.portfolio_modal {
  display: fixed; /* Hidden by default */
  align-items: center;
  justify-content: center;
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0, 0, 0); /* Fallback color */
  background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
}

.portfolio_modal_close {
  position: absolute;
  top: 40px;
  right: 40px;
  height: 40px;
  width: 40px;
  background-color: #fff;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 20px;
  transition: 1s cubic-bezier(0.2, 0.8, 0.2, 1);
}
.portfolio_modal_close:hover {
  transform: translateY(-3px);
  cursor: pointer;
  color: red;
}

.portfolio_modal_img_container {
  width: 70%;
  height: 80%;
  margin: 0 auto;
}

.portfolio_sliderStyle {
  height: 100%;
  width: 100%;
}

.portfolio_image_container {
  background-color: black;
  height: 50%;
  width: 100%;
}
.portfolio_modal_img {
  width: 720px;
  height: 500px;
  object-fit: contain;
}

.portfolio_slider_image_cont {
  background-color: red;
}

